--- a/pipelines/example-bank-pipeline.yaml
+++ b/pipelines/example-bank-pipeline.yaml
@@ -1,7 +1,7 @@
 ﻿apiVersion: tekton.dev/v1alpha1
 kind: Pipeline
 metadata:
-  name: example-bank
+  name: bank-run-2
 spec:
   resources:
     - name: bank-git
@@ -13,26 +13,26 @@ spec:
     - name: ui-image
       type: image
   tasks:
-    - name: code-analysis
-      params:
-        - name: GOALS
-          value:
-            - install
-            - 'sonar:sonar'
-            - '-Dsonar.host.url=http://sonarqube:9000'
-            - '-Dsonar.userHome=/tmp/sonar'
-            - '-DskipITs'
-            - '-Darguments=-DskipITs'
-      resources:
-        inputs:
-          - name: source
-            resource: bank-git
-      taskRef:
-        kind: Task
-        name: maven
-      workspaces:
-        - name: maven-repo
-          workspace: local-maven-repo
+    # - name: code-analysis
+    #   params:
+    #     - name: GOALS
+    #       value:
+    #         - install
+    #         - 'sonar:sonar'
+    #         - '-Dsonar.host.url=http://sonarqube:9000'
+    #         - '-Dsonar.userHome=/tmp/sonar'
+    #         - '-DskipITs'
+    #         - '-Darguments=-DskipITs'
+    #   resources:
+    #     inputs:
+    #       - name: source
+    #         resource: bank-git
+    #   taskRef:
+    #     kind: Task
+    #     name: maven
+    #   workspaces:
+    #     - name: maven-repo
+    #       workspace: local-maven-repo
     - name: build-transaction
       params:
         - name: TLSVERIFY
@@ -48,8 +48,8 @@ spec:
         outputs:
           - name: image
             resource: transaction-image
-      runAfter:
-        - code-analysis
+      # runAfter:
+      #   - code-analysis
       taskRef:
         kind: Task
         name: s2i-java-8
