--- a/pipelines/bank-pipelinerun.yaml
+++ b/pipelines/bank-pipelinerun.yaml
@@ -12,7 +12,7 @@ spec:
       type: git
       params:
         - name: url
-          value: https://github.com/IBM/example-bank.git
+          value: https://github.com/chrishemb/bank-app-2.git
         - name: revision
           value: main
   - name: transaction-image
