--- a/pipelines/example-bank-pipeline.yaml
+++ b/pipelines/example-bank-pipeline.yaml
@@ -1,7 +1,7 @@
 ﻿apiVersion: tekton.dev/v1alpha1
 kind: Pipeline
 metadata:
-  name: bank-run-2
+  name: bank-app
 spec:
   resources:
     - name: bank-git
@@ -68,8 +68,8 @@ spec:
         outputs:
           - name: image
             resource: user-image
-      runAfter:
-        - code-analysis
+      # runAfter:
+      #   - code-analysis
       taskRef:
         kind: Task
         name: s2i-java-8
@@ -84,8 +84,8 @@ spec:
         outputs:
           - name: image
             resource: ui-image
-      runAfter:
-        - code-analysis
+      # runAfter:
+      #   - code-analysis
       taskRef:
         kind: Task
         name: s2i-nodejs
@@ -95,7 +95,7 @@ spec:
           value: >
             oc apply -f
             https://raw.githubusercontent.com/IBM/example-bank/main/bank-app-backend/transaction-service/deployment.yaml
-            -n example-bank
+            -n dev-cjh-1
       runAfter:
         - build-transaction
       taskRef:
@@ -107,7 +107,7 @@ spec:
           value: >
             oc apply -f
             https://raw.githubusercontent.com/IBM/example-bank/main/bank-app-backend/user-service/deployment.yaml
-            -n example-bank
+            -n dev-cjh-1
       runAfter:
         - build-user
       taskRef:
@@ -119,7 +119,7 @@ spec:
           value: >
             oc apply -f
             https://raw.githubusercontent.com/IBM/example-bank/main/deployment.yaml
-            -n example-bank
+            -n dev-cjh-1
       runAfter:
         - build-transaction
       taskRef:
